<resources>
    <string name="app_name">EnigWall</string>
    <string name="signin">Se connecter</string>
    <string name="signup">S\'inscrire</string>
    <string name="connexionError">Aucune connexion détectée</string>
    <string name="welcome">Bienvenue sur EnigWall</string>
    <string name="pseudo">Pseudo</string>
    <string name="mail">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="password2">Retaper le mot de passe</string>
    <string name="passwordMessage">Les mots de passe ne concordent pas</string>
    <string name="passwordLenght">Le mot de passe doit contenir 4 caractères minimuns</string>
    <string name="mailMessage">L\'e-mail est incorrect</string>
    <string name="reset">Réinitialiser</string>
    <string name="signupInProgress">Inscription en cours...</string>
    <string name="hub_welcome">Le jeu commence...</string>
    <string name="toast_mailUsed">Mail déjà utilisé</string>
    <string name="toast_pseudoUsed">Pseudo déjà utilisé</string>
    <string name="toast_pseudoLength">Le pseudo doit contenir 5 caractères minimums</string>
    <string name="toast_pseudoChar">Le pseudo doit être uniquement composé de caractères alphabétiques</string>
    <string name="toastCancel">Annuler</string>
    <string name="signinInProgress">Connexion en cours...</string>
    <string name="userError">Utilisateur inconnu</string>
    <string name="connect">Connexion</string>
    <string name="hub_begin">Commencer une partie</string>
    <string name="hub_continue">Reprendre une partie</string>
    <string name="hub_connectMsg">Bienvenue</string>
    <string name="hub_del_cpt">ATTENTION! Ceci supprimera votre compte ainsi que votre progression dans le jeu!</string>
    <string name="hub_but_cancel">ANNULER</string>
    <string name="hub_but_del">SUPPRIMER</string>
    <string name="hub_signoff">Voulez-vous vraiment vous déconnecter?</string>
    <string name="hub_signoff_cancel">ANNULER</string>
    <string name="hub_signoff_del">DECONNEXION</string>
    <string name="hub_del_advert">SUPRESSION EN COURS...</string>
    <string name="hub_del_error">Erreur, nous n\'avons pas pu supprimer votre compte</string>
    <string name="menu_del_cpt">Supprimer compte</string>
    <string name="menu_signoff">Se déconnecter</string>
    <string name="msgLocalisation">Ville</string>
    <string name="msgLocalisationRecherche">Calcul localisation en cours...</string>
    <string name="loadgame">Chargement de l\'énigme...</string>
    <string name="msgIndicationProxi1">Vous êtes très loin de l\'objectif !</string>
    <string name="msgIndicationProxi2">Vous êtes loin de l\'objectif !</string>
    <string name="msgIndicationProxi3">Vous êtes proche de l\'objectif !</string>
    <string name="msgIndicationProxi4">Vous êtes très proche de l \'objectif !</string>
    <string name="msgIndicationProxi5">Bravo, vous avez réussi !</string>
    <string name="nextEnigme">Enigme suivante</string>
    <string name="voting">Passez au vote</string>
    <string name="confirmation">Une énigme est déjà en cours ! Voulez-vous quand même commencer une nouvelle partie ?</string>
    <string name="begin">Commencer</string>
    <string name="enigmeOK">Des énigmes sont disponibles !</string>
    <string name="enigmeNOK">Aucune énigme disponible !</string>
    <string name="ratingTxt">Merci de voter pour le parcours !</string>
    <string name="ratingBtn">Votez !</string>
    <string name="ratingError">Erreur pour l\'enregistrement du vote !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- google map -->
    <string name="googleKey" templateMergeStrategy="preserve" translatable="false">AIzaSyAqcoAafGCzn724pSSCca8REl02OknCtaE</string>
</resources>
