<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="condorcet.appinfo3.groupe4.enigwall.SignupActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="35dp">

        <TextView
            android:text="@string/pseudo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="4"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/pseudoEd"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:backgroundTint="@android:color/holo_green_dark"
            android:layout_marginRight="15dp"
            android:textColorLink="@android:color/holo_green_dark" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:text="@string/mail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView3"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/mailEd"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:backgroundTint="@android:color/holo_green_dark"
            android:layout_marginRight="15dp"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEd"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:backgroundTint="@android:color/holo_green_dark"
            android:layout_marginRight="15dp"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:text="@string/password2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEd2"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textCursorDrawable="@android:color/holo_green_dark"
            android:backgroundTint="@android:color/holo_green_dark"
            android:layout_marginRight="15dp"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:gravity="center">

        <Button
            android:text="@string/reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resetButton"
            android:layout_weight="0.5"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/holo_green_dark"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:onClick="reset" />

        <Button
            android:text="@string/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/validateButton"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:onClick="signin" />
    </LinearLayout>
</LinearLayout>