<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="condorcet.appinfo3.groupe4.enigwall.MainActivity"
    android:weightSum="1"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_weight="0.19"
        android:layout_marginTop="30dp">

        <TextView
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeTv"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="?android:attr/editTextColor"
            android:gravity="center"
            android:textStyle="normal|bold" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageView3"
            android:background="@drawable/fed_wall" />

    </LinearLayout>

    <Button
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupButton"
        android:layout_weight="0.03"
        android:layout_gravity="center"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:padding="25dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="signup" />

    <Button
        android:text="@string/signin"
        android:layout_height="wrap_content"
        android:id="@+id/signinButton"
        android:layout_weight="0.05"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:padding="25dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="signin" />
</LinearLayout>
