<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.08"
        android:layout_marginTop="30dp"
        android:layout_height="60dp">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/colorTextBlack"
            android:gravity="center"
            android:textStyle="normal|bold"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageView3"
            android:background="@drawable/fed_wall" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:padding="25dp"
        android:background="@color/colorButton"
        android:text="@string/hub_continue"
        android:id="@+id/continueButton"
        android:onClick="continuer" />

    <Button
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:padding="25dp"
        android:background="@color/colorButton"
        android:text="@string/hub_begin"
        android:id="@+id/beginButton"
        android:onClick="commencer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeTv"
        android:layout_weight="0.08"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorTextBlack" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localisationTv"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_weight="0.08"
        android:textColor="@color/colorTextBlack" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/informationTv"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_weight="0.08"
        android:textColor="@color/colorTextBlack" />
</LinearLayout>